[gd_scene load_steps=14 format=3 uid="uid://0o7dkwqtyyxj"]

[ext_resource type="Script" path="res://Scenes/Enemies/Enemy/EnemyEntity.gd" id="1_ws0e1"]
[ext_resource type="PackedScene" uid="uid://drin2ypsnbwlx" path="res://Scenes/Health/HealthComponent.tscn" id="2_co7y2"]
[ext_resource type="PackedScene" uid="uid://dcct87i2bniia" path="res://Scenes/Weapon/WeaponComponent.tscn" id="3_076ob"]
[ext_resource type="Texture2D" uid="uid://74071iwcglgi" path="res://Assets/Ships/ship_0000.png" id="4_d1cxr"]
[ext_resource type="Texture2D" uid="uid://xl3dhjblph8k" path="res://Assets/Tiles/spritesheetexplosion.png" id="5_papye"]

[sub_resource type="AtlasTexture" id="AtlasTexture_njuud"]
atlas = ExtResource("5_papye")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_urncc"]
atlas = ExtResource("5_papye")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua0se"]
atlas = ExtResource("5_papye")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3jld"]
atlas = ExtResource("5_papye")
region = Rect2(108, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_c6tre"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njuud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urncc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua0se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3jld")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6sbv2"]
size = Vector2(30, 21)

[sub_resource type="Animation" id="Animation_dxeg7"]
resource_name = "ShipExplode"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3.14159, 0.0, -3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rp1au"]
_data = {
"ShipExplode": SubResource("Animation_dxeg7")
}

[node name="EnemyEntity" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_ws0e1")

[node name="HealthComponent" parent="." instance=ExtResource("2_co7y2")]

[node name="WeaponComponent" parent="." instance=ExtResource("3_076ob")]
position = Vector2(0, 19)

[node name="EnemySprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
texture = ExtResource("4_d1cxr")

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_c6tre")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_6sbv2")

[node name="ShipExplode" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rp1au")
}
